@@ -1,5 +1,5 @@
 #! /bin/sh
-# Generated automatically by config.status (chomik) 0.1.14
+# Generated automatically by config.status (chomik) 0.1.15
 # Libtool was configured on host hexul:
 # NOTE: Changes made to this file will be lost: look at ltmain.sh.
 
